# sim_Integration-1-Tracking-Control-p-Odometry

./: .gitignore  Dockerfile  README.md  docker-compose.yml
src/mi_proyecto_sim/: CMakeLists.txt  package.xml  ultimo_reporte_circulo.csv  ultimo_reporte_punto.csv  ultimo_reporte_rosmaster.csv
src/mi_proyecto_sim/launch/: simulacion.launch.py
src/mi_proyecto_sim/mi_proyecto_sim/: control_circulo.py  control_punto.py  plotter.py
src/mi_proyecto_sim/src/: planificador_rrt.cpp
src/rviz/: configuracion.rviz
src/yahboom_rosmaster/yahboom_rosmaster_description/urdf/control/: rosmaster_x3_ros2_control.urdf.xacro  velocity_control_plugin.urdf.xacro
src/yahboom_rosmaster/yahboom_rosmaster_description/urdf/mech/: mecanum_wheel.urdf.xacro
src/yahboom_rosmaster/yahboom_rosmaster_description/urdf/robots/: rosmaster_x3.urdf.xacro
